# scam-sense

./: .gcloudignore  .gitignore  Makefile  README.md  app.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
assets/: dashboard.js  footer.js  index.js  navbar.js  registration.js
assets/env/: dev  prod
assets/scss/: index.scss
openapi/: runtime.ts
openapi/.openapi-generator/: FILES
openapi/apis/: ApiApi.ts  SchemaApi.ts  StudentsApi.ts  UsersApi.ts  index.ts
openapi/models/: UserRegistration.ts  index.ts
scam_sense/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
scam_sense/api/: dashboard.py  openapi.yaml  registration.py
scam_sense/generation/: email_personalisation.py  mistral.py
scam_sense/io/: email.py
static/: dashboard_bundle.js  dashboard_bundle.js.LICENSE.txt  index_bundle.js  index_bundle.js.LICENSE.txt  registration_bundle.js
templates/: dashboard.html  index.html  registration.html
wsgi/: wsgi.py
